solve errors